changes after PO review; fixed css issue of notifications area

--- a/public/index.html
+++ b/public/index.html
@@ -83,10 +83,10 @@
 					Oh, and it’s free.
 				</div>
 				<div class="try-wrapper">
-					<a href="create/"><button type="button" class="button try-button">Test the ALPHA!</button></a>
+					<a href="create/"><button type="button" class="button try-button">Test the alpha!</button></a>
 				</div>
 				<div class="newsletter-signup-text create_subtext">
-					<p>I just want to <a href="#contact">sign up</a> for the newsletter.</p>
+					<p>Or <a href="#contact">sign up</a> for the newsletter.</p>
 				</div>
 		</article>
 	</section>
