--- a/public/create/index.html
+++ b/public/create/index.html
@@ -12,7 +12,7 @@
 	<div data-ng-view></div>
 
 	<div id="notification-area" class="notifications">
-		We're in alpha. <a class="readmore" href="http://blog.scripler.com/test-scripler-now.html">Read more</a>
+		We're in alpha. <a class="readmore" target="_blank" href="http://blog.scripler.com/test-scripler-now.html">Read more</a>
 	</div>
 	<div id="registrationFooter" class="registration" data-ng-hide="user.emailVerified || user.isDemo || registrationBarHiddenByUser" data-ng-class="{ 'green' : user._id }" data-ng-cloak>
 		<div id="registrationContainer" class="registration-container">
