Changed a lot of things and cleaned up, will explain closer in the pull request

--- a/public/create/index.html
+++ b/public/create/index.html
@@ -9,14 +9,14 @@
 </head>
 <body data-ng-controller="appController" data-ng-cloak>
 
-	<div data-ng-view></div>
+	<div class="container" data-ng-class="{'shownotification' : showBottomRegistrationBar}" data-ng-view></div>
 
-	<div id="notification-area" class="notifications">
+	<div id="notification-area" class="notifications" data-ng-class="{ 'loggedin' : !showBottomRegistrationBar }">
 		We're in alpha. <a class="readmore" target="_blank" href="http://blog.scripler.com/test-scripler-now.html">Read more</a>
 	</div>
-	<div id="registrationFooter" class="registration" data-ng-hide="user.emailVerified || user.isDemo || registrationBarHiddenByUser" data-ng-class="{ 'green' : user._id }" data-ng-cloak>
+	<div id="registrationFooter" class="registration" data-ng-hide="!showBottomRegistrationBar" data-ng-class="{ 'green' : user._id }" data-ng-cloak>
 		<div id="registrationContainer" class="registration-container">
-			<div class="registration-close-button" data-ng-click="registrationBarHiddenByUser = !registrationBarHiddenByUser" data-ng-show="user._id">x</div>
+			<div class="registration-close-button" data-ng-click="showBottomRegistrationBar = !showBottomRegistrationBar" data-ng-show="user._id">x</div>
 			<div class="registration-text" data-ng-bind="registrationText" data-ng-class="{ 'validate' : user._id }" data-ng-hide="user.isDemo"></div>
 
 			<div class="registration-form">
