--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -225,8 +225,8 @@
 					<span class="menu-box inputfield">
 						<input type="text" data-ng-model="anchorName" placeholder="Anchor name">
 					</span>
-					<span class="left-menu-button">
-						<a data-ng-click="insertNewAnchor();">+</a>
+					<span class="left-menu-button anchor-button">
+						<a class="anchor-link" data-ng-click="insertNewAnchor();">+</a>
 					</span>
 
 					<span class="menu-box left-menu-parameter-margin">
