--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -222,8 +222,8 @@
 			<!--<li class="insertOption"><img src="pages/images/insert_cover_button.png" width="80" height="80"></li>-->
 			<li class="insertOptionProperties" data-ng-class="{ 'expanded' : activeInsertOption === 'showInsertAnchorOptions' }">
 				<div class="left-menu-options">
-					<span class="menu-box inputfield">
-						<input type="text" data-ng-model="anchorName" placeholder="Anchor name">
+					<span class="menu-box">
+						<input type="text" data-ng-model="anchorName" placeholder="Anchor name" class="anchor-name">
 					</span>
 					<span class="left-menu-button anchor-button">
 						<a class="anchor-link" data-ng-click="insertNewAnchor();">+</a>
