fixes to anchor placement

--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -134,7 +134,7 @@
 						</select>
 					</span>
 					<span class="left-menu-button full-size left-menu-parameter-margin">
-						<a data-ng-click="insertNewLink();">+</a>
+						<a class="anchor-link" data-ng-click="insertNewLink();">+</a>
 					</span>
 				</div>
 			</li>
