--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -31,7 +31,6 @@
 
 				<form data-ng-show="projectDocument.editingProjectDocumentTitle">
 					<p>
-						<!-- it is not working because ff doesn't take it as a blur, with the on-enter, if I put the rename in there it works in ff, but then not in chrome -->
 						<textarea class="renameProjectDocument" rows="4" data-ng-model="projectDocument.name" focus-on="!!projectDocument.editingProjectDocumentTitle" blur-on-enter data-ng-blur="renameProjectDocument(projectDocument); projectDocument.editingProjectDocumentTitle = false;"></textarea>
 					</p>
 				</form>
@@ -59,7 +58,7 @@
 
 				<form data-ng-show="styleset.editingStyleSetTitle">
 					<p>
-						<textarea class="renameStyleset" rows="1" data-ng-model="styleset.name" focus-on="!!styleset.editingStyleSetTitle" on-enter="styleset.editingStyleSetTitle = false;" data-ng-blur="styleset.editingStyleSetTitle = false; renameStyleset(styleset);"></textarea>
+						<textarea class="renameStyleset" rows="1" data-ng-model="styleset.name" focus-on="!!styleset.editingStyleSetTitle" blur-on-enter data-ng-blur="styleset.editingStyleSetTitle = false; renameStyleset(styleset);"></textarea>
 					</p>
 				</form>
 
@@ -90,7 +89,7 @@
 						</div>
 
 						<form data-ng-show="style.editingStyleTitle">
-							<textarea class="renameStyle" rows="1" data-ng-model="style.name" focus-on="!!style.editingStyleTitle" on-enter="style.editingStyleTitle = false;" data-ng-blur="style.editingStyleTitle = false; updateStyle(style);"></textarea>
+							<textarea class="renameStyle" rows="1" data-ng-model="style.name" focus-on="!!style.editingStyleTitle" blur-on-enter data-ng-blur="style.editingStyleTitle = false; updateStyle(style);"></textarea>
 						</form>
 
 						<div class="style-options" data-ng-show="$index == selectedStylesetChildOptions">
