--- a/public/create/index.html
+++ b/public/create/index.html
@@ -43,9 +43,10 @@
 	</div>
 	<script type="text/javascript" src="scripts/angular-file-upload-html5-shim.min.js"></script>
 	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/webfont/1.5.3/webfont.js"></script>
-	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular.js"></script>
-	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-route.js"></script>
-	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-sanitize.js"></script>
+	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular.min.js"></script>
+	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-route.min.js"></script>
+	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-sanitize.min.js"></script>
+	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-animate.min.js"></script>
 	<script type="text/javascript" src="scripts/angular-local-storage.min.js"></script>
 	<script type="text/javascript" src="scripts/angular-file-upload.min.js"></script>
 	<script type="text/javascript" src="scripts/angucomplete-alt.js"></script>
