cleaned up, hideStyleEditor and FocusEditor was already called inside the functions in the controller

--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -5,7 +5,7 @@
 	<div class="menu-tab" data-ng-class="{ 'selectedTab' : leftMenuShowItem == 'contents' }" data-ng-click="showLeftMenu('contents');">
 			<img src="pages/images/contents.svg" width="20">
 		</div>
-	<div class="menu-tab" data-ng-class="{ 'selectedTab' : leftMenuShowItem == 'design' }" data-ng-click="showLeftMenu('design'); hideStyleEditor(); focusEditor();">
+	<div class="menu-tab" data-ng-class="{ 'selectedTab' : leftMenuShowItem == 'design' }" data-ng-click="showLeftMenu('design');">
 			<img src="pages/images/design.svg" width="20">
 		</div>
 	<div class="menu-tab" data-ng-class="{ 'selectedTab' : leftMenuShowItem == 'insert' }" data-ng-click="showLeftMenu('insert');">
