--- a/public/create/index.html
+++ b/public/create/index.html
@@ -14,7 +14,7 @@
 	<div class="notifications" data-ng-class="{ 'loggedin' : !showRegistrationInfoBar || user.emailVerified || user.isDemo, 'activation' : user._id }">
 		We're in alpha. <a class="readmore" target="_blank" href="http://blog.scripler.com/test-scripler-now.html">Read more</a>
 	</div>
-	<div class="registration" data-ng-hide="user.emailVerified || user.isDemo || !showRegistrationInfoBar" data-ng-class="{ 'activation' : user._id }" data-ng-cloak>
+	<div id="registrationWrapper" class="registration" data-ng-hide="user.emailVerified || user.isDemo || !showRegistrationInfoBar" data-ng-class="{ 'activation' : user._id }" data-ng-cloak>
 		<div id="registrationContainer" class="registration-container">
 			<div class="registration-form explanation" data-ng-hide="user.isDemo">
 				<div class="registration-close-button" data-ng-click="showRegistrationBar('hide')" data-ng-show="user._id">x</div>
