updates the hyperlink subtab with the selected hyperlink data

--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -123,7 +123,7 @@
 				<li class="insertOptionProperties" data-ng-class="{ 'expanded' : activeInsertOption === 'showInsertHyperlinkOptions' }">
 					<div class="left-menu-options">
 						<span class="menu-box inputfield">
-							<input type="text" data-ng-model="linkAddress" placeholder="Target">
+							<input id="hyperlinkTarget" type="text" data-ng-model="linkAddress" placeholder="Target">
 						</span>
 						<span class="menu-box inputfield menu-parameter-margin">
 						<input id="hyperlinkInputBox" type="text" data-ng-model="linkText" placeholder="Text">
